--- a/public/index.html
+++ b/public/index.html
@@ -2,46 +2,39 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/edumax.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <!-- 기존 메타 태그 -->
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/edumax.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <!-- 추가 메타 태그들 -->
+    <meta name="keywords" content="수원 입시 학원, 고등학생, 재수생, 수능 준비, 소수 정예반" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Edumax - 수원 최고의 입시 학원" />
+    <meta property="og:description" content="Edumax 학원은 수원에서 고등학생과 재수생을 위한 맞춤형 입시 교육을 제공합니다." />
+    <meta property="og:image" content="%PUBLIC_URL%/edumax.png" />
+    <meta property="og:url" content="https://edumax-kr.com" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Edumax - 수원 최고의 입시 학원" />
+    <meta name="twitter:description" content="Edumax 학원에서 맞춤형 수업을 통해 수능을 준비하세요." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/edumax.png" />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/edumax.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>EduMax</title>
+    <title>EduMax - 수원 최고의 입시 학원</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
